# ScholarBite

./: .env.example  .gitignore  LICENSE  README.md  REPORT.md  docker-compose.yml  pyproject.toml
config/: config.example.json
docs/: index.html
docs/assets/: index-5pJ68BhM.css  index-9LHs3WHj.css  index-B_JxYIVO.css  index-Bh6XjzWI.js  index-CURm3Afb.js  index-D097cvXy.css  index-D8NkDRSF.js  index-DL0btldR.css  index-DvqLBUsO.js  index-FXGFpx7x.js  index-fPXrDPAr.js  index-xPd3k34Z.css
scholarbite/: __init__.py  arxiv_fetcher.py  paper_formatter.py  relevance_scorer.py
tests/: test_arxiv_fetcher.py  test_paper_formatter.py  test_relevance_scorer.py
website/: index.html  package-lock.json  package.json  vite.config.js
website/src/: App.jsx  index.css
website/src/components/: GlassCard.jsx  Nav.jsx  ParticleField.jsx  Section.jsx
website/src/sections/: CTA.jsx  ChatDemo.jsx  Features.jsx  Footer.jsx  Hero.jsx  LiveDemo.jsx  Pipeline.jsx  Privacy.jsx  Providers.jsx  QuickStart.jsx  Stats.jsx
workspace/: AGENTS.md  HEARTBEAT.md  USER.md
workspace/skills/arxiv-researcher/: SKILL.md
workspace/skills/arxiv-researcher/scripts/: fetch_arxiv.py
